Stop elements from overflowing

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@ html,
 body {
   height: 100%;
   margin: 0;
+  overflow-x: hidden;
 }
 body {
   font-family: "Josefin Sans", sans-serif;
